# AI_study_Buddy

./: .env  .gitignore  README.md  docker-compose.yaml  prometheus.yml
ai_studdy_buddy_roadmap/: design.excalidraw  roadmap.excalidraw
ai_study_buddy/: pyproject.toml
ai_study_buddy/ai_study_bud/: README.md  pyproject.toml
ai_study_buddy/ai_study_bud/src/ai_study_bud/: crew.py  main.py
assets/: agents.excalidraw  design.excalidraw
frontend/: Dockerfile  default.conf  index.html  package-lock.json  tailwind.config.js
frontend/project/: package-lock.json  package.json  tailwind.config.js
frontend/project/src/: index.css  main.tsx
frontend/src/: App.tsx
frontend/src/components/: AchievementPopup.tsx  FileUpload.tsx  ResultContent.tsx  (+1 more)
study_buddy/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  supervisord.conf
study_buddy/study_buddy/: README.md  pyproject.toml  report.md  requirements.txt  training_data.pkl
study_buddy/study_buddy/outputs/: card.json  content.txt  explaination.txt  summary.txt  tests.json
study_buddy/study_buddy/src/: app.py  celery_app.py  config.py  db.py  lifespan.py  metrics.py  middleware.py  security.py  setup_services.py  tests.py  utils.py
study_buddy/study_buddy/src/outputs/: card.json  content.txt  explaination.txt  summary.txt  tests.json
study_buddy/study_buddy/src/routes/: auth.py  tasks.py  users.py
study_buddy/study_buddy/src/study_buddy/: crew.py  main.py
study_buddy/study_buddy/src/study_buddy/config/: agents.yaml  tasks.yaml
study_buddy/study_buddy/src/study_buddy/tools/: custom_tool.py
(+14 files in other folders)
