[project]
name = "study_buddy"
version = "0.1.0"
description = "study_buddy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "PyPDF2",
    "agentops",
    "python-multipart",
    "asyncpg",
    "passlib",
    "python-jose[cryptography]",
    "celery[redis]",
    "aioredis"

]

[project.scripts]
study_buddy = "study_buddy.main:run"
run_crew = "study_buddy.main:run"
train = "study_buddy.main:train"
replay = "study_buddy.main:replay"
test = "study_buddy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
